--- a/src/Scatter.form
+++ b/src/Scatter.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Scatter">
   <grid id="27dc6" binding="bg" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="1592" height="1180"/>
