--- a/src/RealSpacePr.form
+++ b/src/RealSpacePr.form
@@ -77,6 +77,7 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="L1Norm"/>
                     </properties>
@@ -86,6 +87,7 @@
                       <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="Moore"/>
                     </properties>
@@ -95,6 +97,7 @@
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="Legendre"/>
                     </properties>
@@ -104,6 +107,7 @@
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="L2Norm"/>
                     </properties>
@@ -113,6 +117,7 @@
                       <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="SPI"/>
                     </properties>
@@ -160,6 +165,7 @@
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="bckgrnd"/>
                     </properties>
@@ -169,6 +175,7 @@
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="positive only"/>
                     </properties>
@@ -178,6 +185,7 @@
                       <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="show bins"/>
                     </properties>
@@ -187,6 +195,7 @@
                       <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="plot qxI(q)"/>
                     </properties>
@@ -196,6 +205,7 @@
                       <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-36"/>
                       <text value="Label"/>
                     </properties>
