--- a/src/Scatter.form
+++ b/src/Scatter.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="55679" binding="sidePanel" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="55679" binding="sidePanel" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="West"/>
         <properties>
@@ -91,14 +91,14 @@
           </grid>
           <component id="e6828" class="javax.swing.JProgressBar" binding="mainProgressBar">
             <constraints>
-              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="100" height="30"/>
                 <preferred-size width="100" height="30"/>
               </grid>
             </constraints>
             <properties>
               <font size="12" style="1"/>
-              <foreground color="-1"/>
+              <foreground color="-12086017"/>
             </properties>
           </component>
           <grid id="be078" binding="prButtonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -254,7 +254,7 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-4917297"/>
+              <background color="-13419191"/>
               <font size="10"/>
               <foreground color="-1"/>
               <text value="&lt;html&gt;nm&lt;sup&gt;-1&lt;/sup&gt; to Angstrom&lt;sup&gt;-1&lt;/sup&gt;&lt;/html&gt;"/>
@@ -262,10 +262,10 @@
           </component>
           <component id="bcff6" class="javax.swing.JCheckBox" binding="autoRgCheckBox" default-binding="true">
             <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-4917297"/>
+              <background color="-13419191"/>
               <font size="10"/>
               <foreground color="-1"/>
               <maximumSize width="50" height="23"/>
