--- a/src/Settings.form
+++ b/src/Settings.form
@@ -249,6 +249,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16777216"/>
               <foreground color="-3670058"/>
               <selected value="true"/>
               <text value="exclude waters from input PDB?"/>
