--- a/src/version4/FindDmax.form
+++ b/src/version4/FindDmax.form
@@ -208,6 +208,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13419191"/>
                   <foreground color="-3670058"/>
                   <text value="L1-Norm"/>
                 </properties>
@@ -226,6 +227,7 @@
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13419191"/>
                   <foreground color="-3737345"/>
                   <text value="Legendre"/>
                 </properties>
@@ -235,6 +237,7 @@
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13419191"/>
                   <foreground color="-7235"/>
                   <text value="Moore"/>
                 </properties>
@@ -244,6 +247,7 @@
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13419191"/>
                   <foreground color="-14902"/>
                   <margin top="1" left="1" bottom="0" right="5"/>
                   <text value="use Bkgrnd"/>
