--- a/src/SECTool.form
+++ b/src/SECTool.form
@@ -108,7 +108,7 @@
               <grid id="61efe" binding="parametersPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="4" left="0" bottom="2" right="0"/>
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13483695"/>
@@ -153,6 +153,7 @@
                           <background color="-1315861"/>
                           <font name="Century Gothic"/>
                           <foreground color="-9994855"/>
+                          <margin top="0" left="0" bottom="0" right="0"/>
                           <text value="TRACE"/>
                         </properties>
                       </component>
@@ -164,6 +165,7 @@
                           <background color="-1315861"/>
                           <font name="Century Gothic"/>
                           <foreground color="-9994855"/>
+                          <margin top="0" left="0" bottom="0" right="0"/>
                           <text value="SET BUFFER"/>
                         </properties>
                       </component>
@@ -241,7 +243,7 @@
                             </properties>
                             <border type="none"/>
                             <children>
-                              <component id="e37fa" class="javax.swing.JLabel">
+                              <component id="e37fa" class="javax.swing.JLabel" binding="qminLabel">
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
@@ -255,14 +257,14 @@
                               <component id="2fa6f" class="javax.swing.JTextField" binding="qminSECField">
                                 <constraints>
                                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                                    <preferred-size width="60" height="-1"/>
+                                    <preferred-size width="40" height="-1"/>
                                   </grid>
                                 </constraints>
                                 <properties>
                                   <text value="0.01"/>
                                 </properties>
                               </component>
-                              <component id="d9bf4" class="javax.swing.JLabel">
+                              <component id="d9bf4" class="javax.swing.JLabel" binding="qmaxLabel">
                                 <constraints>
                                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
@@ -276,7 +278,7 @@
                               <component id="ac40c" class="javax.swing.JTextField" binding="qmaxSECField">
                                 <constraints>
                                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                                    <preferred-size width="60" height="-1"/>
+                                    <preferred-size width="40" height="-1"/>
                                   </grid>
                                 </constraints>
                                 <properties>
