Removed extra spaces from data lines, should terminate directly with System.lineSeparator.  Also, fixed the file selector buttons on Subtract and SECTool tabs

--- a/src/Subtract.form
+++ b/src/Subtract.form
@@ -269,7 +269,7 @@
                 <properties>
                   <background color="-13419191"/>
                   <foreground color="-1"/>
-                  <selected value="true"/>
+                  <selected value="false"/>
                   <text value="Scale then Merge"/>
                 </properties>
               </component>
