--- a/src/version4/FindDmax.form
+++ b/src/version4/FindDmax.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="version4.FindDmax">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+    <margin top="2" left="2" bottom="2" right="2"/>
     <constraints>
       <xy x="48" y="54" width="1006" height="722"/>
     </constraints>
@@ -23,8 +23,8 @@
           <grid id="70802" binding="leftPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="400" height="300"/>
-                <preferred-size width="400" height="300"/>
+                <minimum-size width="400" height="290"/>
+                <preferred-size width="400" height="290"/>
               </grid>
             </constraints>
             <properties>
@@ -268,7 +268,8 @@
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <background color="-13419191"/>
+                      <background color="-1315861"/>
+                      <font name="Century Gothic" style="1"/>
                       <text value="Start"/>
                     </properties>
                   </component>
@@ -285,7 +286,8 @@
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <background color="-13419191"/>
+                      <background color="-1315861"/>
+                      <font name="Century Gothic" style="1"/>
                       <text value="Color"/>
                     </properties>
                   </component>
