Added export trace button, need to include I(0) and Rg as additional columns

--- a/src/SECTool.form
+++ b/src/SECTool.form
@@ -105,7 +105,7 @@
                   </grid>
                 </children>
               </grid>
-              <grid id="61efe" binding="parametersPanel" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="61efe" binding="parametersPanel" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="4" left="0" bottom="2" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
@@ -506,7 +506,7 @@
                   </component>
                   <component id="f3dd9" class="javax.swing.JButton" binding="MERGEButton" default-binding="true">
                     <constraints>
-                      <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-1315861"/>
@@ -527,10 +527,18 @@
                   </component>
                   <component id="6ee6a" class="javax.swing.JButton" binding="SVDCORMAPButton" default-binding="true">
                     <constraints>
-                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="SVD-CORMAP"/>
+                    </properties>
+                  </component>
+                  <component id="1a868" class="javax.swing.JButton" binding="exportTraceButton" default-binding="true">
+                    <constraints>
+                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Export Trace"/>
                     </properties>
                   </component>
                 </children>
